# rusty-yew-shop

./: .gitignore  .justfile  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
src/: app.rs  data.rs  main.rs  router.rs
src/components/: banner.rs  cart.rs  checkout_button.rs  layout.rs  loading.rs  login_form.rs  mod.rs  product_card.rs
src/pages/: about.rs  home.rs  login.rs  mod.rs
