[package]
name = "yew-shop"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "0.2"
async-std = { version = "1.10", features = ["attributes"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [ 
  "HtmlInputElement",
  "EventTarget",
  "Element",
  "Node",
  "Event",
  "InputEvent",
  "Window",
  "Storage",
  "Location",
]}
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
dotenvy = "0.15.7"
rust_decimal = "1.35.0"
